User photo uploading method done

--- a/DatingApp.API/DatingApplication/appsettings.json
+++ b/DatingApp.API/DatingApplication/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dkb4ri3yx",
+    "ApiKey": "959414998381137",
+    "ApiSecret": "mje3RrmYwWBlYjEGsDXwZuHU4_8"
+  }
 }
